# robot_animation

./: .gitignore  .pre-commit-config.yaml  MUJOCO_LOG.TXT  README.md  hello.py  playground.ipynb  pyproject.toml
data/: kuka_1.csv  kuka_20250302_183743.csv  kuka_formatted.csv  kuka_formatted2.csv
experimentation/: data_analysis.ipynb  model_evaluation.ipynb  mujoco_playground.ipynb  playground.ipynb  ppo.py
nbs/: data_analysis.ipynb  mnist_tg.py  model_evaluation.ipynb  mujoco_playground.ipynb  tinygrad.ipynb
nbs/benchmarking_tinygrad/: cartpole.py
robot_models/kuka_iiwa/: .iiwa_14.png.icloud  iiwa14.xml  scene.xml
src/robot_animation/: __init__.py  data_processing.py  env.py  example_env.py  ppo_training.py
src/robot_animation/environments/: base.py  kuka_iiwa4.py
src/robot_animation/optimized/: README.md  c_gae.c  c_gae.pyx  cleanrl_ppo.py  clearnrl_tinygrad.py  environment.py  train.py
src/robot_animation/optimized/updated_envs/: __init__.py  ant_v5.py  humanoid_v5.py  robot_animation.py
src/robot_animation/optimized/updated_envs/data/: kuka_2_test.csv
src/robot_animation/optimized/updated_envs/robot_models/kuka_iiwa/: iiwa14.xml
src/robot_animation/puffer/: clean_pufferl.py  cleanrl_ppo.py  clearnrl_tinygrad.py  policy.py  puffer_environment.py  sp.py  tiny_ppo.py  train.py  train_ppo_puffer.py  utils.py
src/robot_animation/puffer/config/: debug.toml
