[project]
name = "robot-animation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "gymnasium",
    "imageio>=2.37.0",
    "ipykernel>=6.29.5",
    "isort>=6.0.1",
    "mediapy>=1.2.2",
    "mujoco>=3.2.7",
    "pufferlib@git+https://github.com/kywch/PufferLib@dev",
    "carbs@git+https://github.com/kywch/carbs.git@fixes",
    "pandas>=2.2.3",
    "pre-commit>=4.1.0",
    "robot-descriptions>=1.14.0",
    "ruff>=0.9.9",
    "stable-baselines3[extra]>=2.5.0",
    "wandb>=0.19.7",
    "numpy==1.23.3",
    "scikit-learn==1.1.3",
    "scipy==1.13.1",
    "torch>=2.3",
    "tensordict@git+https://github.com/pytorch/tensordict.git",
    "pynvml",
    "moviepy",
    "tinygrad>=0.10.2",
    "ipython>=9.0.2",
    "jupyter>=1.1.1",
]

[build-system]
requires = ["hatchling", "cython>=3.0", "pip>=23.0", "setuptools>=61.0", "wheel", "numpy==1.23.3"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py39"

# Enable flake8-bugbear ('B') rules
select = ["E", "F", "B"]

# Never enforce `E501` (line length violations)
ignore = ["E501"]

[tool.hatch.metadata]
allow-direct-references = true
